<resources>
    <!--Main Activity-->
    <string name="app_name">Revercipe</string>
    <string name="action_bar">"What's In The Fridge?"</string>
    <string name="login_button">Sign In</string>
    <string name="register_link">Register</string>
    <string name="search">Search</string>
    <string name="sign_in">Login</string>
    <string name="sign_up_button">Sign up</string>
    <string name="sign_in_facebook">Sign n with facebook</string>
    <string name="sign_in_google">Sign in with google</string>
    <string name="logout_text">Logout</string>
    <!--About Activity-->
    <string name="about_button">About</string>
    <string name="about_description_header">Application Description</string>
    <string name="about_description">
        "What's In The Fridge is an app that provides you with recipes made from the ingredients you have in the fridge."
    </string>
    <string name="contact_title">Developer Info</string>
    <string name="contact_name">Developer: Asher Fisher and eliau eitan</string>
    <string name="code">https://github.com/gstuart</string>

    <!--Log In Activity-->
    <string name="email_hint">Enter Email Address</string>
    <string name="password_hint">Enter Password</string>

    <!--Create Account Activity-->
    <string name="first_name_hint">Enter First Name</string>
    <string name="last_name_hint">Enter Last Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="registration_button">Register</string>

    <!--Fridge Activity-->
    <string name="ingredient_instruction">Find recipes by entering ingredients, separated by a comma, which you have in your refrigerator</string>
    <string name="ingredient">Enter ingredient(s)</string>
    <string name="search_button">Find Recipes</string>
    <string name="saved_button">Saved Recipes</string>

    <!--Recipe List Item Activity-->
    <string name="recipe_title">Recipe Name: </string>
    <string name="recipe_url">Link to recipe: </string>
    <string name="recipe_ingredients">Ingredients: </string>

    <!-- Recipe Detail Fragment -->
    <string name="ingredient_list_text_view">Contains your ingredients: </string>
    <string name="online_view">View Recipe Online</string>
    <string name="save_button">Save Recipe</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="guest_user">Login as guest</string>
    <string name="app_desc">Dont know what to cook ?</string>
    <string name="app_desc2">Dont know what to cook ?</string>

    <!--Menu-->


</resources>