<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.reverserecipe.ui.Splash">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/s_img"
        android:alpha="0.2"
        android:src="@drawable/splash"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            style="@style/AudioFileInfoOverlayText"
            android:fontFamily="@font/amnesia"
            android:layout_marginBottom="50sp"
            android:textSize="70dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/AudioFileInfoOverlayText"
            android:textSize="40dp"
            android:fontFamily="@font/amnesia"

            android:id="@+id/tv1"
            android:text="@string/app_desc"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv2"
            android:gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            style="@style/AudioFileInfoOverlayText"
            android:textSize="30dp"
            android:fontFamily="@font/amnesia"
            android:text="@string/app_desc2"
            android:layout_marginTop="14dp" />

    </LinearLayout>


</RelativeLayout>
