<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.reverserecipe.ui.Fridge"
    android:background="@color/colorPrimary" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/colorPrimaryLight"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
<!--TODO need to add Next Focus for-->


        <TextView
        android:id="@+id/instructionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/amnesia"
        android:layout_gravity="center"
        android:padding="20sp"
        android:text="@string/ingredient_instruction"
        android:textAlignment="center"
        android:textColor="@color/colorTextIcons"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <EditText
        android:id="@+id/ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instructionView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:ems="15"
        android:hint="@string/ingredient"
        android:textAlignment="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionView" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:padding="8dp"
        android:background="@drawable/blue_button"
        android:text="@string/search_button"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:fontFamily="@font/amnesia"
        app:layout_constraintBottom_toTopOf="@+id/savedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/savedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:padding="8dp"
        android:background="@drawable/blue_button"
        android:text="@string/saved_button"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:fontFamily="@font/amnesia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
