<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/s_img"
        android:alpha="0.7"
        android:src="@drawable/splash"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/amnesia"
            android:layout_marginTop="36dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="42sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        card_view:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="Password"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/custom_signin_button"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/blue_button"
                    android:tag="custom_login_button"
                    android:text="@string/sign_in"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/custom_signup_button"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/blue_button"
                    android:tag="custom_signup_button"
                    android:text="@string/sign_up_button"
                    android:textColor="@color/white" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/facebook_login_button"
                    android:layout_width="200dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_corner_button"
                    android:drawableStart="@drawable/ic_facebook"
                    android:drawableLeft="@drawable/ic_facebook"
                    android:paddingStart="8dp"
                    android:paddingLeft="8dp"
                    android:paddingEnd="8dp"
                    android:tag="facebook_login_button"
                    android:text="@string/sign_in_facebook"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/google_login_button"
                    android:layout_width="200dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/google_button"
                    android:drawableStart="@drawable/ic_icons8_google"
                    android:drawableLeft="@drawable/ic_icons8_google"
                    android:paddingEnd="8dp"
                    android:paddingRight="8dp"
                    android:tag="google_login_button"
                    android:text="@string/sign_in_google"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/guest_login"
                    android:layout_width="200dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="56dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_default"
                    android:text="@string/guest_user"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>


</android.support.constraint.ConstraintLayout>